unpackaged/main/default/objects/SDO_SCOM_Auction_Bid__c/SDO_SCOM_Auction_Bid__c.object-meta.xml
<CustomObject>
    <label>Auction Bid</label>
    <nameField>
        <displayFormat>AB-{00000}/{000}</displayFormat>
        <label>Auction Bid Nmae</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auction Bids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>