unpackaged/main/default/objects/SDO_SCOM_Auction_Bid__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account for which user is placing order</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Auction Bids</relationshipLabel>
    <relationshipName>SDO_SCOM_Auction_Bids</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>