unpackaged/main/default/objects/SDO_SCOM_Auction_Bid__c/fields/Auction__c.field-meta.xml
<CustomField>
    <fullName>Auction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Auction for which bid is placed</description>
    <label>Auction</label>
    <referenceTo>SDO_SCOM_Auction__c</referenceTo>
    <relationshipLabel>Auction Bids</relationshipLabel>
    <relationshipName>Auction_Bids</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>