unpackaged/main/default/objects/SDO_SCOM_Auction_Bid__c/fields/Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bid_Amount__c</fullName>
    <description>User&#39;s bid</description>
    <label>Bid Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>