unpackaged/main/default/objects/SDO_SCOM_Auction_Bid__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Auction Bids</relationshipLabel>
    <relationshipName>SDO_SCOM_Auction_Bids</relationshipName>
    <type>Lookup</type>
</CustomField>