unpackaged/main/default/objects/SDO_SCOM_Auction_Bid__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SDO_SCOM_Auction_Bids</relationshipName>
    <type>Lookup</type>
</CustomField>